Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/086_function_missing_return_ifelse_then_return.xi
f(x:bool):int
{
    if (x) {
        return 0
    } else {
    }
}
//@PRACOWNIA
//@should_not_typecheck
